--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,7 @@
     --headingColor:#3A3A3A;
     --button:#E02C6D;
     --white:#ffffff;
+    --border:linear-gradient(rgba(192, 204, 218, 0.1),rgba(192, 204, 218, 0.6),rgba(192, 204, 218, 0.1));
 
 }
 
@@ -22,6 +23,10 @@
 /* share class */
 img{
     max-width: 100%;
+}
+
+section{
+    margin-top: 6rem;
 }
 
 
@@ -110,3 +115,24 @@ button{
     flex-basis: 50%;
     text-align: right;
 }
+
+
+/* main design  */
+main{
+    max-width: 1110px;
+    margin: 0 auto;
+}
+
+/* sponsor section  */
+.sponsor{
+    padding-block: 2rem;
+    display: grid;
+    grid-template-columns: repeat(7,1fr);
+    align-items: center;
+    justify-content: space-evenly;
+    border-block: 1px solid gainsboro;
+    gap: 1rem;
+    margin: 0 auto;
+}
+
+
