--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,16 +2,16 @@
 
 
 /* variable color  */
-:root{
-    --headingColor:#3A3A3A;
-    --button:#E02C6D;
-    --white:#ffffff;
-    --border:linear-gradient(rgba(192, 204, 218, 0.1),rgba(192, 204, 218, 0.6),rgba(192, 204, 218, 0.1));
+:root {
+    --headingColor: #3A3A3A;
+    --button: #E02C6D;
+    --white: #ffffff;
+    --border: linear-gradient(rgba(192, 204, 218, 0.1), rgba(192, 204, 218, 0.6), rgba(192, 204, 218, 0.1));
 
 }
 
 /* universal select  */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -21,17 +21,17 @@
 }
 
 /* share class */
-img{
+img {
     max-width: 100%;
 }
 
-section{
+section {
     margin-top: 6rem;
 }
 
 
 /* header section */
-header{
+header {
     max-width: 1200px;
     margin: 0 auto;
     padding-block: 6rem;
@@ -39,95 +39,100 @@ header{
 
 
 /* nav section */
-nav{
+nav {
     display: flex;
     align-items: end;
     justify-content: space-between;
 }
 
-.logo h5{
+.logo h5 {
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--headingColor);
 }
 
-nav ul{
+nav ul {
     display: flex;
     align-items: start;
     justify-content: center;
 }
 
-li a{
+li a {
     color: var(--headingColor);
     font-size: 1rem;
     font-weight: 600;
     margin-left: 2rem;
 }
 
-li a i{
+li a i {
     font-size: 1.5rem;
 }
 
-.menu{
+.menu {
     display: none;
 }
-.menu i{
+
+.menu i {
     font-size: 24px;
 }
 
 /* hero section  */
-.hero{
+.hero {
     margin-top: 3rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.hero-content{
+.hero-content {
     flex-basis: 50%;
 }
 
-.hero-content h1{
+.hero-content h1 {
     font-size: 3.25rem;
     font-weight: bold;
     color: var(--headingColor);
 }
-.hero-content h1, .hero-content p{
-        margin-bottom: 1rem;
+
+.hero-content h1,
+.hero-content p {
+    margin-bottom: 1rem;
 
 }
-p{
+
+p {
     font-size: 1rem;
     font-weight: 700;
     color: var(--headingColor);
 }
 
-button{
+button {
     padding: .7rem 1.5rem;
     border: none;
     background: var(--button);
     border-radius: 2.7rem;
     color: var(--white);
 }
-.hero-image{
+
+.hero-image {
     background: url(../images/Circle\ design.svg) no-repeat;
-    background-position: right ;
+    background-position: right;
     flex-basis: 50%;
     text-align: right;
 }
 
 
 /* main design  */
-main{
+main {
     max-width: 1110px;
     margin: 0 auto;
 }
 
 /* sponsor section  */
-.sponsor{
+.sponsor {
     padding-block: 2rem;
     display: grid;
-    grid-template-columns: repeat(7,1fr);
+    grid-template-columns: repeat(7, 1fr);
     align-items: center;
     justify-content: space-evenly;
     border-block: 1px solid gainsboro;
@@ -136,3 +141,81 @@ main{
 }
 
 
+/* product section  */
+main .product-container {
+    max-width: 1047px;
+    margin-inline: auto;
+    text-align: center;
+}
+
+.products {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    place-items: center;
+}
+
+.product-container h4 {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.product-item {
+    max-width: 330px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 1.1rem .9rem;
+    text-align: left;
+}
+
+.product-item img {
+    margin-bottom: 1rem;
+}
+
+.product-item h4 {
+    font-weight: 500;
+    color: #18191F;
+    margin-bottom: .2rem;
+}
+
+.product-item h5 {
+    font-size: 24px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.87);
+}
+
+.star {
+    margin-bottom: .2rem;
+}
+
+.star i {
+    color: #FB8200;
+    width: 11px;
+    height: 11px;
+    margin-right: 4px;
+}
+
+.star span {
+    font-size: .87rem;
+    font-weight: 700;
+    color: #5E6366;
+    margin-left: 5px;
+}
+
+.product-item p {
+    font-size: 14px;
+    font-weight: 700;
+    color: #787885;
+}
+
+.right p {
+    color: #E02C6D;
+    text-align: right;
+    cursor: pointer;
+}
+
+.right i{
+    margin-left: 3px;
+}
