--- a/assets/styles/responsive.css
+++ b/assets/styles/responsive.css
@@ -15,6 +15,9 @@
     html{
         font-size: 80%;
     }
+    .feature-content h2{
+        font-size: 2rem;
+    }
 }
 /* responsive 768px = 48rem  */
 @media screen and (max-width:48rem) {
@@ -62,6 +65,10 @@
 
     .products{
         grid-template-columns: repeat(1, 1fr);
+    }
+
+    .feature-container{
+        flex-direction: column;
     }
     
 }
