--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -111,7 +111,9 @@ button {
     border: none;
     background: var(--button);
     border-radius: 2.7rem;
+    font-weight: 700;
     color: var(--white);
+    cursor: pointer;
 }
 
 .hero-image {
@@ -218,4 +220,71 @@ main .product-container {
 
 .right i{
     margin-left: 3px;
+}
+
+
+/* feature section  */
+.feature-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+
+}
+
+.feature-image{
+    flex-basis: 40%;
+}
+.feature-content{
+    flex-basis: 60%;
+}
+.feature-content h2{
+    font-size: 2.3rem;
+    margin-bottom: 1rem;
+}
+.feature-content p{
+    margin-bottom: 1rem;
+}
+
+
+/* footer section  */
+footer{
+    width: 100%;
+    padding-block: 3rem;
+    background: #0A0826;
+    text-align: center;
+    color: var(--white);
+    margin-top: 3rem;
+}
+
+footer h3{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--white);
+}
+
+footer p{
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--white);
+}
+
+.social{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.social i{
+    font-size: 20px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 32px;
+    border-radius: 50%;
+    background: #787885;
 }
